--- a/README
+++ b/README
@@ -2,11 +2,20 @@
 
 ## Installation
 
-## Add Pathogen
+### Add Pathogen
 cp ~/Projects/config/vim-pathogen/autoload/pathogen.vim ~/.vim/autoload/
 
-## Add plugins
+### Add plugins
 cd ~/.vim/
 git submodule add https://github.com/fergusb/vim-foo.git bundle/foo
+
+### Init plugins
+cd ~/.vim/
+git submodule init
+git submodule update
+
+### Update plugins
+git submodule foreach git pull origin master
+
 
 " vim:ft=mkd
