--- a/README
+++ b/README
@@ -1,7 +1,8 @@
 # Fergus' vim setup
 
 ## Installation
-cd ~/
+cd [or] cd ~/
+git clone git://github.com/fergusb/vim.git .vim
 ln -s .vim/vimrc ~/.vimrc
 
 ### Add plugins
