--- a/README
+++ b/README
@@ -10,6 +10,9 @@ cd ~/.vim/
 git submodule init
 git submodule update
 
+Note: for pyflakes to work correctly, use:
+  git submodule update --init --recursive
+
 ### Add plugins
 cd ~/.vim/
 mkdir bundle
