--- a/install
+++ b/install
@@ -28,8 +28,8 @@ fi
 ln -s $HOME/.vim/vimrc $HOME/.vimrc
 mkdir -p $HOME/.vim/{tmp,undo,view}
 # install submodues and init
-git submodule init --recursive
+git submodule init
 wait
-git submodule update --recursive
+git submodule update --init --recursive
 wait
 printf "All done!\n"
