--- a/install
+++ b/install
@@ -30,6 +30,8 @@ mkdir -p $HOME/.vim/{tmp,undo,view}
 # install submodues and init
 git submodule init
 wait
+git submodule foreach git pull origin master
+wait
 git submodule update --init --recursive
 wait
 printf "All done!\n"
